@@ -13,6 +13,7 @@ import java.util.TreeMap;
 
 import static com.codeborne.selenide.CollectionCondition.texts;
 import static com.codeborne.selenide.Condition.*;
+import static com.spbstu.epam.enums.differentElementsPage.DIFFERENT_ELEMENTS_PAGE_LOG_CATEGORIES.LOG_CATEGORY_1;
 
 public class DifferentElementsPageSelenide {
     ElementsCollection checkboxes = Selenide.$$(".label-checkbox");
@@ -35,7 +36,7 @@ public class DifferentElementsPageSelenide {
 
     String radioInputCssSelector = "[type=radio]";
 
-    public void checkPageElements(){
+    public void checkPageElements() {
         checkboxes.forEach(e -> e.shouldBe(visible));
         radios.forEach(e -> e.shouldBe(visible));
         dropdown.shouldBe(visible);
@@ -45,62 +46,59 @@ public class DifferentElementsPageSelenide {
         rightSideSection.shouldBe(visible);
     }
 
-    public void setCheckboxSelected(String s){
-        checkboxes.find(text(s)).setSelected(true).$(checkboxInputCssSelector).shouldBe(checked);
+    public void setCheckboxSelected(String s) {
+        if (!checkboxes.find(text(s)).$(checkboxInputCssSelector).is(selected)) {
+            checkboxes.find(text(s)).setSelected(true);
+        }
+        checkboxes.find(text(s)).$(checkboxInputCssSelector).shouldBe(checked);
     }
 
-    public void setRadioSelected(String s){
+    public void setCheckboxUnselected(String s) {
+        if (checkboxes.find(text(s)).$(checkboxInputCssSelector).is(selected)) {
+            checkboxes.find(text(s)).setSelected(true);
+        }
+        checkboxes.find(text(s)).$(checkboxInputCssSelector).shouldNotBe(checked);
+    }
+
+    public void setRadioSelected(String s) {
         radios.find(text(s)).setSelected(true).$(radioInputCssSelector).shouldBe(selected);
     }
 
-    public void setDropdownValue(String s){
+    public void setDropdownValue(String s) {
         dropdown.selectOption(s);
         dropdown.shouldHave(text(s));
     }
 
-    public void checkLogs(List<String> names){
-        logRecords.shouldHave(texts(names));
-
-        boolean radioFlag = true;
-        boolean colorFlag = true;
-        Map<String, Boolean> checkboxFlags = new TreeMap<>();
-        for(SelenideElement e : logRecords){
-            List<String> splitedString = Arrays.asList(e.getText().split("\\d\\d:\\d\\d:\\d\\d ")[1].split(": "));
-
-            String param = splitedString.get(1).split(" to ")[1];
-            String category = splitedString.get(0);
-
-            switch (category){
+    public void checkLogs(List<String> names) {
+        for (String name : names) {
+            SelenideElement element = logRecords.findBy(text(name));
+            String[] splittedString = element.getText().split("\\d\\d:\\d\\d:\\d\\d ")[1].split(": ");//this looks awful, but I haven't had a better idea
+            String category = splittedString[0];
+            String param = splittedString[1].split(" to ")[1];
+            switch (category) {
                 case "metal": {
-                    if(radioFlag) {
-                        radios.find(text(param)).$(radioInputCssSelector).shouldBe(selected);
-                        radioFlag = false;
-                    }else{
-                        radios.find(text(param)).$(radioInputCssSelector).shouldNotBe(selected);
+                    if (logRecords.findBy(text(category)).getText().equals(element.getText())) {
+                        radios.findBy(text(name)).$(radioInputCssSelector).shouldBe(selected);
+                    } else {
+                        radios.findBy(text(name)).$(radioInputCssSelector).shouldNotBe(selected);
                     }
-                }break;
+                } break;
                 case "Colors": {
-                    if(colorFlag) {
-                        dropdown.getSelectedOption().shouldHave(text(param));
-                        colorFlag = false;
-                    }else{
-                        dropdown.getSelectedOption().shouldNotHave(text(param));
+                    if (logRecords.findBy(text(category)).getText().equals(element.getText())) {
+                        dropdown.getSelectedOption().shouldHave(text(name));
+                    } else {
+                        dropdown.getSelectedOption().shouldNotHave(text(name));
                     }
-                }break;
+                } break;
                 default: {
-                    if(new Boolean(param)){
-                        if(!checkboxFlags.get(category)) {
-                            checkboxes.findBy(text(category)).$(checkboxInputCssSelector).shouldBe(checked);
-                            checkboxFlags.put(category, true);
-                        }
-                    }else{
-                        if(!checkboxFlags.get(category)) {
-                            checkboxes.findBy(text(category)).$(checkboxInputCssSelector).shouldBe(checked);
-                            checkboxFlags.put(category, true);
-                        }
+                    if (Boolean.valueOf(param)) {
+                        checkboxes.findBy(text(name)).$(checkboxInputCssSelector).shouldBe(selected);
+                    } else {
+                        checkboxes.findBy(text(name)).$(checkboxInputCssSelector).shouldNotBe(selected);
                     }
-                }break;
+                } break;
             }
         }
     }
+
 }
